[workspace]
members = ["xtask"]
resolver = "2"

[package]
name = "e64-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
spleen-font = { version = "0.2", default-features = false, features = ["s8x16"] }
limine = "0.5"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
debug = true
